--- a/docker_build_context/backend/Dockerfile
+++ b/docker_build_context/backend/Dockerfile
@@ -3,14 +3,17 @@ FROM python:3
 LABEL maintainer="Matteo Sgalaberni <sgala@sgala.com>"
 
 VOLUME /app/
+VOLUME /dist/
 
 WORKDIR /usr/src/app
+
+MKDIR /disk/am_charts/
 
 COPY requirements.txt ./
 
 COPY dummy.py .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN mkdir -p /disk/am_charts/ && pip install --no-cache-dir -r requirements.txt
 
  
 CMD [ "python", "./dummy.py" ]
