--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
         build: ./docker_build_context/backend/
         image: swll_backend:latest
         command: [
-            "python", "./dummy.py"
-            ]
+            "python" , "/dummy.py"
+        ]
         env_file: ./docker_env/sgala.env
         volumes:
             -
