--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         build: ./docker_build_context/backend/
         image: swll_backend:latest
         command: [
-            "python" , "/dummy.py"
+            "/init_dev.sh"
         ]
         env_file: ./docker_env/sgala.env
         volumes:
